--- a/css/style.css
+++ b/css/style.css
@@ -147,15 +147,13 @@
 .yomichan-popup-top>.yomichan-setting-popup {
 	position: absolute;
 	left: 100%;
-	top: 100%;
-	transform: translate(25px, -45px);
+	top: 0;
 }
 
 .yomichan-popup-bottom>.yomichan-setting-popup {
 	position: absolute;
 	left: 100%;
-	bottom: 100%;
-	transform: translate(25px, 25px);
+	top: 0;
 }
 
 .yomichan-setting-popup>div {
