--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@
 	margin-top: 10px;
 	justify-content: flex-start;
 	align-items: center;
-	flex-wrap: wrap;
+	flex-wrap: nowrap; /* 버튼들이 항상 가로로 배치되도록 함 */
 }
 
 .yomichan-popup>.yomichan-button-area>button {
